Fixed Spacing in Text

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ img {
 .text {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 16px;
     padding: 0 16px;
     background-color: var(--white);
 }
